wier/force-app/main/default/objects/COpportunity__c/COpportunity__c.object-meta.xml
<CustomObject>
    <label>Opportunity</label>
    <nameField>
        <displayFormat>Opp-{0000000000}</displayFormat>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>