wier/force-app/main/default/objects/COpportunity__c/fields/Abu_Dhabi_Revenue_Stream__c.field-meta.xml
<CustomField>
    <fullName>Abu_Dhabi_Revenue_Stream__c</fullName>
    <label>Abu Dhabi Revenue Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motors</fullName>
            </value>
            <value>
                <fullName>Valves</fullName>
            </value>
            <value>
                <fullName>Pumps</fullName>
            </value>
            <value>
                <fullName>Turbines</fullName>
            </value>
            <value>
                <fullName>O&amp;M</fullName>
            </value>
            <value>
                <fullName>Tubular</fullName>
            </value>
            <value>
                <fullName>Machineshop</fullName>
            </value>
            <value>
                <fullName>BOP</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>