wier/force-app/main/default/objects/COpportunity__c/fields/Actual_TAT__c.field-meta.xml
<CustomField>
    <fullName>Actual_TAT__c</fullName>
    <formula>Tender_submitted_date_for_approval__c  -  CSR_Bid_Decision_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>