wier/force-app/main/default/objects/COpportunity__c/fields/Age_of_quotes__c.field-meta.xml
<CustomField>
    <fullName>Age_of_quotes__c</fullName>
    <formula>TODAY()  -  Quote_approved_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>