wier/force-app/main/default/objects/COpportunity__c/fields/Ageing_of_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Ageing_of_Quotes__c</fullName>
    <formula>TODAY()  -  Quote_approved_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing of Quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>