wier/force-app/main/default/objects/COpportunity__c/fields/Aramco_Non_Aramco__c.field-meta.xml
<CustomField>
    <fullName>Aramco_Non_Aramco__c</fullName>
    <formula>IF(CONTAINS( UPPER(Customer__r.Name),&quot;ARAMCO&quot;), &quot;Aramco&quot;, &quot;Non-Aramco&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aramco/Non-Aramco</label>
    <type>Text</type>
</CustomField>