wier/force-app/main/default/objects/COpportunity__c/fields/Attn__c.field-meta.xml
<CustomField>
    <fullName>Attn__c</fullName>
    <label>Attn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>