wier/force-app/main/default/objects/COpportunity__c/fields/Authority_Comments_on_Bid_No_Bid__c.field-meta.xml
<CustomField>
    <fullName>Authority_Comments_on_Bid_No_Bid__c</fullName>
    <label>Authority Comments on Bid/No Bid</label>
    <type>TextArea</type>
</CustomField>