wier/force-app/main/default/objects/COpportunity__c/fields/Budgetary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Budgetary_Quote__c</fullName>
    <label>Budgetary Quote</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>