wier/force-app/main/default/objects/COpportunity__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIS</fullName>
            </value>
            <value>
                <fullName>Dubai - APS/RE</fullName>
            </value>
            <value>
                <fullName>Dubai - Oilfield</fullName>
            </value>
            <value>
                <fullName>Iraq</fullName>
            </value>
            <value>
                <fullName>NAI</fullName>
            </value>
            <value>
                <fullName>Oman</fullName>
            </value>
            <value>
                <fullName>Saudi</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>