wier/force-app/main/default/objects/COpportunity__c/fields/Clarification_rquired_on_draft_invoiced__c.field-meta.xml
<CustomField>
    <fullName>Clarification_rquired_on_draft_invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clarification required on draft invoiced</description>
    <label>Clarification required on draft invoice</label>
    <type>Checkbox</type>
</CustomField>