wier/force-app/main/default/objects/COpportunity__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <label>Customer enquiry date</label>
    <type>Date</type>
</CustomField>