wier/force-app/main/default/objects/COpportunity__c/fields/Close_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Close_opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close opportunity</label>
    <type>Checkbox</type>
</CustomField>