wier/force-app/main/default/objects/COpportunity__c/fields/Comment_for_on_hold_closed_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Comment_for_on_hold_closed_opportunity__c</fullName>
    <label>Comment for &apos;on hold&apos;/closed opportunity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>