wier/force-app/main/default/objects/COpportunity__c/fields/Comment_on_Level_of_competition__c.field-meta.xml
<CustomField>
    <fullName>Comment_on_Level_of_competition__c</fullName>
    <description>Level of competition</description>
    <label>Comment on Level of competition</label>
    <type>TextArea</type>
</CustomField>