wier/force-app/main/default/objects/COpportunity__c/fields/Comments_for_lost_quote__c.field-meta.xml
<CustomField>
    <fullName>Comments_for_lost_quote__c</fullName>
    <label>Comments for lost quote</label>
    <type>TextArea</type>
</CustomField>