wier/force-app/main/default/objects/COpportunity__c/fields/Comments_on_Tendering_Process_Approval__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_Tendering_Process_Approval__c</fullName>
    <description>Comments on Tendering Process Approval</description>
    <label>Comments on Tendering Process Approval</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>