wier/force-app/main/default/objects/COpportunity__c/fields/Comments_on_Tendering_Process_Requir__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_Tendering_Process_Requir__c</fullName>
    <label>Comments on TP Require changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>