wier/force-app/main/default/objects/COpportunity__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>