wier/force-app/main/default/objects/COpportunity__c/fields/Contents_of_customer_communication__c.field-meta.xml
<CustomField>
    <fullName>Contents_of_customer_communication__c</fullName>
    <label>Contents of customer communication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>