wier/force-app/main/default/objects/COpportunity__c/fields/Contract_Rep_assigned__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rep_assigned__c</fullName>
    <label>Contract Rep assigned</label>
    <type>TextArea</type>
</CustomField>