wier/force-app/main/default/objects/COpportunity__c/fields/CSR_Bid_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>CSR_Bid_Decision_Date__c</fullName>
    <description>When CSR completes bid no bid</description>
    <label>CSR Bid Decision Date</label>
    <type>Date</type>
</CustomField>