wier/force-app/main/default/objects/COpportunity__c/fields/CSR_s_comment_on_opportunity__c.field-meta.xml
<CustomField>
    <fullName>CSR_s_comment_on_opportunity__c</fullName>
    <label>CSR&apos;s comment on Opportunity</label>
    <type>TextArea</type>
</CustomField>