wier/force-app/main/default/objects/COpportunity__c/fields/CSR_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>CSR_s_Manager__c</fullName>
    <label>CSR&apos;s Manager</label>
    <type>Email</type>
</CustomField>