wier/force-app/main/default/objects/COpportunity__c/fields/CSR_updates_on_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CSR_updates_on_Opportunity__c</fullName>
    <label>CSR updates on Opportunity</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>