wier/force-app/main/default/objects/COpportunity__c/fields/CSRCommentsOnBid__c.field-meta.xml
<CustomField>
    <fullName>CSRCommentsOnBid__c</fullName>
    <label>CSR&apos;s comment on Bid/No Bid</label>
    <type>TextArea</type>
</CustomField>