wier/force-app/main/default/objects/COpportunity__c/fields/CSRDecisionOnBid__c.field-meta.xml
<CustomField>
    <fullName>CSRDecisionOnBid__c</fullName>
    <label>CSR&apos;s Decision on Bid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>