wier/force-app/main/default/objects/COpportunity__c/fields/Customer_enquiry_execution__c.field-meta.xml
<CustomField>
    <fullName>Customer_enquiry_execution__c</fullName>
    <label>Customer enquiry execution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quotation and job, both executed in Dubai facility</fullName>
            </value>
            <value>
                <fullName>Not processed/Involving any support by Dubai facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>