wier/force-app/main/default/objects/COpportunity__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <formula>CASESAFEID( Customer__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Id</label>
    <type>Text</type>
</CustomField>