wier/force-app/main/default/objects/COpportunity__c/fields/Customer_invoiced__c.field-meta.xml
<CustomField>
    <fullName>Customer_invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiced in MOVEX</label>
    <type>Checkbox</type>
</CustomField>