wier/force-app/main/default/objects/COpportunity__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF(   BEGINS(Customer__r.Name, &apos;S. ARAMCO DTH&apos;)  , &apos;1&apos;, &apos;0&apos;)</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>