wier/force-app/main/default/objects/COpportunity__c/fields/Customer_Name_If_Walkin_jobs__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_If_Walkin_jobs__c</fullName>
    <label>Customer Name (If Walkin jobs)</label>
    <type>TextArea</type>
</CustomField>