wier/force-app/main/default/objects/COpportunity__c/fields/Customer_Order_acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Order acknowledged</label>
    <type>Checkbox</type>
</CustomField>