wier/force-app/main/default/objects/COpportunity__c/fields/Customer_requires_material_from_particul__c.field-meta.xml
<CustomField>
    <fullName>Customer_requires_material_from_particul__c</fullName>
    <label>Customer requires material origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>