wier/force-app/main/default/objects/COpportunity__c/fields/Customer_Support_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Name__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(LEFT(  Customer_Support_Engineer_Email__c , FIND(&apos;@&apos;, Customer_Support_Engineer_Email__c )),&quot;.&quot;, &quot; &quot;), &quot;@&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Support Name</label>
    <type>Text</type>
</CustomField>