wier/force-app/main/default/objects/COpportunity__c/fields/Cutomer_requires_clarification_on_quote__c.field-meta.xml
<CustomField>
    <fullName>Cutomer_requires_clarification_on_quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cutomer requires clarification on quote</label>
    <type>Checkbox</type>
</CustomField>