wier/force-app/main/default/objects/COpportunity__c/fields/Decision_by_Authority_above_HOS__c.field-meta.xml
<CustomField>
    <fullName>Decision_by_Authority_above_HOS__c</fullName>
    <label>Decision by Authority above HOS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>