wier/force-app/main/default/objects/COpportunity__c/fields/Delay_in_Quote_Updates__c.field-meta.xml
<CustomField>
    <fullName>Delay_in_Quote_Updates__c</fullName>
    <formula>TODAY()  -    Quote_approved_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay in Quote Updates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>