wier/force-app/main/default/objects/COpportunity__c/fields/Delivery_due_date_as_per_Customer_Order__c.field-meta.xml
<CustomField>
    <fullName>Delivery_due_date_as_per_Customer_Order__c</fullName>
    <label>Delivery due date as per Customer Order</label>
    <type>Date</type>
</CustomField>