wier/force-app/main/default/objects/COpportunity__c/fields/Details_on_Quote_Delay__c.field-meta.xml
<CustomField>
    <fullName>Details_on_Quote_Delay__c</fullName>
    <label>Details on Quote Delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>