wier/force-app/main/default/objects/COpportunity__c/fields/Discount_amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_amount__c</fullName>
    <label>Discount amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>