wier/force-app/main/default/objects/COpportunity__c/fields/Discount_in_cost_sheet__c.field-meta.xml
<CustomField>
    <fullName>Discount_in_cost_sheet__c</fullName>
    <label>Discount in cost sheet (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>