wier/force-app/main/default/objects/COpportunity__c/fields/Dispatch_ref_no__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_ref_no__c</fullName>
    <label>Dispatch ref. no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>