wier/force-app/main/default/objects/COpportunity__c/fields/Dispatch_through__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_through__c</fullName>
    <label>Dispatch through</label>
    <length>255</length>
    <type>Text</type>
</CustomField>