wier/force-app/main/default/objects/COpportunity__c/fields/Draft_invoice_sent_to_Finance__c.field-meta.xml
<CustomField>
    <fullName>Draft_invoice_sent_to_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Draft invoice sent to Finance</label>
    <type>Checkbox</type>
</CustomField>