wier/force-app/main/default/objects/COpportunity__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Quotation review due date</label>
    <type>Date</type>
</CustomField>