wier/force-app/main/default/objects/COpportunity__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <label>End destination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UAE</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia</fullName>
            </value>
            <value>
                <fullName>Oman</fullName>
            </value>
            <value>
                <fullName>Qatar</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Kuwait</fullName>
            </value>
            <value>
                <fullName>Iraq</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Caribbean</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Congo</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Egypt</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Gabon</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Ghana</fullName>
            </value>
            <value>
                <fullName>Hungary</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Iran</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Israel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>