wier/force-app/main/default/objects/COpportunity__c/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Customer__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (End User)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>