wier/force-app/main/default/objects/COpportunity__c/fields/Equipment_Receipt_Note_ERN__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Receipt_Note_ERN__c</fullName>
    <label>Equipment Receipt Note (ERN)</label>
    <type>TextArea</type>
</CustomField>