wier/force-app/main/default/objects/COpportunity__c/fields/Expected_date_of_input__c.field-meta.xml
<CustomField>
    <fullName>Expected_date_of_input__c</fullName>
    <label>Expected date of input</label>
    <type>Date</type>
</CustomField>