wier/force-app/main/default/objects/COpportunity__c/fields/Expected_manhours_from_tendering__c.field-meta.xml
<CustomField>
    <fullName>Expected_manhours_from_tendering__c</fullName>
    <label>Expected tendering hours / any comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>