wier/force-app/main/default/objects/COpportunity__c/fields/Expected_Quotation_value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Quotation_value__c</fullName>
    <label>Expected Quotation Value</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>