wier/force-app/main/default/objects/COpportunity__c/fields/Expected_TAT__c.field-meta.xml
<CustomField>
    <fullName>Expected_TAT__c</fullName>
    <formula>Quotation_submittal_date__c - CSR_Bid_Decision_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>