wier/force-app/main/default/objects/COpportunity__c/fields/Finance_com_inment_on_draft__c.field-meta.xml
<CustomField>
    <fullName>Finance_com_inment_on_draft__c</fullName>
    <description>Finance comment on draft invoice</description>
    <label>Finance comment on draft invoice</label>
    <type>TextArea</type>
</CustomField>