wier/force-app/main/default/objects/COpportunity__c/fields/Full_payment_received__c.field-meta.xml
<CustomField>
    <fullName>Full_payment_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice fully collected</label>
    <type>Checkbox</type>
</CustomField>