wier/force-app/main/default/objects/COpportunity__c/fields/General_Manager_comment_on_Bid_No_Bid__c.field-meta.xml
<CustomField>
    <fullName>General_Manager_comment_on_Bid_No_Bid__c</fullName>
    <label>General Manager comment on Bid/No Bid</label>
    <type>TextArea</type>
</CustomField>