wier/force-app/main/default/objects/COpportunity__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <label>Gross Margin (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>