wier/force-app/main/default/objects/COpportunity__c/fields/Gross_Margin_Buckets__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Buckets__c</fullName>
    <formula>IF( ( Gross_Roundup__c &gt;0 &amp;&amp; Gross_Roundup__c &lt;=  1000), &apos;0-10&apos;,  
IF( (Gross_Roundup__c &gt; 1000 &amp;&amp; Gross_Roundup__c &lt;= 2000) , &apos;11-20&apos;,  
IF((Gross_Roundup__c    &gt; 2000  &amp;&amp; Gross_Roundup__c &lt;= 3000), &apos;21-30&apos;,  
IF((Gross_Roundup__c &gt; 3000 &amp;&amp; Gross_Roundup__c &lt;=  4000), &apos;31-40&apos;,&apos;&gt;40&apos;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin Buckets</label>
    <type>Text</type>
</CustomField>