wier/force-app/main/default/objects/COpportunity__c/fields/Gross_Roundup__c.field-meta.xml
<CustomField>
    <fullName>Gross_Roundup__c</fullName>
    <formula>Gross_Margin__c * 10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Roundup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>