wier/force-app/main/default/objects/COpportunity__c/fields/Handover_to_operation__c.field-meta.xml
<CustomField>
    <fullName>Handover_to_operation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handed over to Operation</label>
    <type>Checkbox</type>
</CustomField>