wier/force-app/main/default/objects/COpportunity__c/fields/Head_of_Sales_Decision_on_Bid__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Sales_Decision_on_Bid__c</fullName>
    <label>Head of Sales Decision on Bid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>