wier/force-app/main/default/objects/COpportunity__c/fields/Head_Of_Tendering_comment_on_Bid_No_Bid__c.field-meta.xml
<CustomField>
    <fullName>Head_Of_Tendering_comment_on_Bid_No_Bid__c</fullName>
    <label>Head Of Tendering&apos;s comment : Bid/No Bid</label>
    <type>TextArea</type>
</CustomField>