wier/force-app/main/default/objects/COpportunity__c/fields/HeadOfSalescomment_on_Bid_No_Bid__c.field-meta.xml
<CustomField>
    <fullName>HeadOfSalescomment_on_Bid_No_Bid__c</fullName>
    <label>HeadOfSalescomment on Bid/No Bid</label>
    <type>TextArea</type>
</CustomField>