wier/force-app/main/default/objects/COpportunity__c/fields/Information_Clarification_required__c.field-meta.xml
<CustomField>
    <fullName>Information_Clarification_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info/clarification reqd. from customer</label>
    <type>Checkbox</type>
</CustomField>