wier/force-app/main/default/objects/COpportunity__c/fields/Invoice_dispatch_date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_dispatch_date__c</fullName>
    <label>Invoice dispatch date</label>
    <type>Date</type>
</CustomField>