wier/force-app/main/default/objects/COpportunity__c/fields/Invoice_due_date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_due_date__c</fullName>
    <label>Invoice due date</label>
    <type>Date</type>
</CustomField>