wier/force-app/main/default/objects/COpportunity__c/fields/Invoice_sent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice sent</label>
    <type>Checkbox</type>
</CustomField>