wier/force-app/main/default/objects/COpportunity__c/fields/Is_the_job_to_be_executed_in_Dubai__c.field-meta.xml
<CustomField>
    <fullName>Is_the_job_to_be_executed_in_Dubai__c</fullName>
    <label>Is the job to be executed in Dubai</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>