wier/force-app/main/default/objects/COpportunity__c/fields/Is_this_opp_a_project__c.field-meta.xml
<CustomField>
    <fullName>Is_this_opp_a_project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>&quot;Project&quot; or Requires Div/Grp Approval</label>
    <type>Checkbox</type>
</CustomField>