wier/force-app/main/default/objects/COpportunity__c/fields/IsFinal__c.field-meta.xml
<CustomField>
    <fullName>IsFinal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFinal</label>
    <type>Checkbox</type>
</CustomField>