wier/force-app/main/default/objects/COpportunity__c/fields/job_completed__c.field-meta.xml
<CustomField>
    <fullName>job_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job completed</label>
    <type>Checkbox</type>
</CustomField>