wier/force-app/main/default/objects/COpportunity__c/fields/Job_ready_for_delivery__c.field-meta.xml
<CustomField>
    <fullName>Job_ready_for_delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job ready for delivery</label>
    <type>Checkbox</type>
</CustomField>