wier/force-app/main/default/objects/COpportunity__c/fields/Jod_Update_locked__c.field-meta.xml
<CustomField>
    <fullName>Jod_Update_locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jod Update locked</label>
    <type>Checkbox</type>
</CustomField>