wier/force-app/main/default/objects/COpportunity__c/fields/Key_Product_Scope_of_Enquiry1__c.field-meta.xml
<CustomField>
    <fullName>Key_Product_Scope_of_Enquiry1__c</fullName>
    <label>Key Product / Scope of Enquiry1</label>
    <type>TextArea</type>
</CustomField>