wier/force-app/main/default/objects/COpportunity__c/fields/Labour_cost__c.field-meta.xml
<CustomField>
    <fullName>Labour_cost__c</fullName>
    <label>Labour cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>